test/suite/semantic_errors/duplicate_procedure/src/redundant.ral



passage main(): void
    "Something is fishy", thought Nemo.
end




function main(): void
end
